login-links were not showing correctly, now fixed

--- a/main.css
+++ b/main.css
@@ -158,7 +158,7 @@ nav {
     display: inline-block;
     margin: 0 3%; }
 
-@media (max-width: 400px) {
+@media (max-width: 505px) {
   #search-bar-form {
     width: 57%;
     margin-right: 35%;
@@ -473,38 +473,38 @@ video {
     width: 80%; }
     .assessment-section h3 {
       font-size: 2.5rem; } }
-.login-signup-form, .user-info-form {
+.login-signup-form {
   text-align: center; }
-  .login-signup-form h2, .user-info-form h2 {
+  .login-signup-form h2 {
     padding: 0;
     color: #454545; }
-  .login-signup-form i, .user-info-form i {
+  .login-signup-form i {
     font-size: 1rem;
     margin-top: 1px; }
-  .login-signup-form .login-title, .user-info-form .login-title {
+  .login-signup-form .login-title {
     margin-top: 23%;
     letter-spacing: 1px;
     font-family: "Fira-Sans", sans-serif, sans-serif; }
-  .login-signup-form .signup-title, .user-info-form .signup-title {
-    margin-top: 10%; }
-  .login-signup-form p, .user-info-form p {
+  .login-signup-form .signup-title {
+    margin-top: 23%; }
+  .login-signup-form p {
     margin-top: 0;
     font-size: 0.8rem;
     color: #FF3C38; }
-  .login-signup-form #switch-login, .user-info-form #switch-login {
+  .login-signup-form #switch-login {
     margin: 10px;
     font-size: 1rem;
     color: #454545; }
-  .login-signup-form input, .user-info-form input {
+  .login-signup-form input {
     width: 55%;
     font-size: 0.8rem;
     line-height: 1.3rem;
     padding-left: 5px;
     margin: 0 0 10px 10px; }
-    .login-signup-form input:hover, .login-signup-form input:active, .login-signup-form input:focus, .user-info-form input:hover, .user-info-form input:active, .user-info-form input:focus {
+    .login-signup-form input:hover, .login-signup-form input:active, .login-signup-form input:focus {
       outline: none;
       box-shadow: 1px 3px 3px 1px rgba(255, 60, 56, 0.9); }
-  .login-signup-form button, .user-info-form button {
+  .login-signup-form button {
     width: 110px;
     display: block;
     margin: 0 auto;
@@ -515,23 +515,30 @@ video {
     padding: 5px 10px;
     border: none;
     box-shadow: 1px 2px 3px 1px rgba(69, 69, 69, 0.3); }
-    .login-signup-form button:hover, .user-info-form button:hover {
+    .login-signup-form button:hover {
       background: #FF3C38;
       cursor: pointer; }
-  .login-signup-form a, .user-info-form a {
+  .login-signup-form a {
     color: #FF3C38;
     font-weight: bolder;
     margin-left: 5px; }
-    .login-signup-form a:hover, .user-info-form a:hover {
+    .login-signup-form a:hover {
       color: #454545; }
-  .login-signup-form #signup-btn, .user-info-form #signup-btn {
+  .login-signup-form #signup-btn {
     margin-left: 5px;
     color: #FF3C38;
     font-weight: bolder; }
-    .login-signup-form #signup-btn:hover, .user-info-form #signup-btn:hover {
+    .login-signup-form #signup-btn:hover {
       color: #454545;
       cursor: pointer; }
 
+@media (max-width: 500px) {
+  .login-signup-form .login-title {
+    padding-top: 85px; }
+  .login-signup-form .signup-title {
+    padding-top: 20px; }
+  .login-signup-form input {
+    border: 1px solid #EEEEEE; } }
 .recipe-title {
   font-size: 2.5rem;
   font-family: "Fira-Sans", sans-serif, sans-serif;
